admission/ValidatingAdmissionPolicy/policies/run-as-group/initcontainers/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: violating-run-as-group-initcontainers
  annotations:
    kubeapt.io/uuid: "14da0518-3885-4dcc-b859-a23056ea44d6"
spec:
  securityContext:
    seccompProfile:
      type: RuntimeDefault
  containers:
  - name: main
    image: busybox:1.36
    command: ["sh", "-c", "sleep 3600"]
    securityContext:
      runAsUser: 1000
      runAsGroup: 1000
      runAsNonRoot: true
      readOnlyRootFilesystem: true
      capabilities:
        drop: ["ALL"]
      seccompProfile:
        type: RuntimeDefault
      appArmorProfile:
        type: RuntimeDefault
